--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,9 +5,10 @@
 }
 
 :root {
+    color: #2b2b45;
     font-size: 62.5%;
     font-size: 1.2rem;
-    font-family: "Roboto", sans-serif;
+    font-family: "Rubik", sans-serif;
 }
 
 body {
@@ -42,10 +43,15 @@ body header .right {
 
 body header h1 {
     margin: 1rem 0;
+    font-family: "Playfair Display", serif;
 }
 
 body main h2 {
     margin: 1rem;
+    color: #fe9fa6;
+    font-size: 1.5rem;
+    font-weight: bold;
+    font-family: "Playfair Display", serif;
 }
 
 body main p {
@@ -58,12 +64,26 @@ body main ul {
 
 body main section {
     padding: 1rem;
+}
+
+body main .courses {
     background-color: #f2f2f2;
     border-top: 3px solid #fe9fa6;
 }
 
 body main section h3 {
     margin: 1rem 0;
+    color: #fe9fa6;
+    font-size: 1.5rem;
+    font-weight: bold;
+    font-family: "Playfair Display", serif;
+}
+
+body main .courses h3 {
+    color: #2b2b45;
+    font-weight: 600;
+    font-size: 1.5rem;
+    font-family: "Playfair Display", serif;
 }
 
 body main section p {
@@ -142,6 +162,7 @@ body main section .container .tablet .nota {
 body main section .container .tablet .nota h4 {
     font-weight: 500;
     font-size: 1.2rem;
+    font-family: "Playfair Display", serif;
 }
 
 body main section .container .tablet .nota p {
@@ -179,6 +200,13 @@ body main section .container .tablet .nota .button {
 body main section .container .tablet .nota .button:hover {
     cursor: pointer;
     background-color: greenyellow;
+}
+
+body main section h4 {
+    color: #fe9fa6;
+    font-size: 1.5rem;
+    font-weight: bold;
+    font-family: "Playfair Display", serif;
 }
 
 body footer {
