--- a/styles/styles.css
+++ b/styles/styles.css
@@ -63,10 +63,11 @@ body main ul {
 }
 
 body main section {
-    padding: 1rem;
+    padding: .5rem;
 }
 
 body main .courses {
+    padding: 1rem;
     background-color: #f2f2f2;
     border-top: 3px solid #fe9fa6;
 }
@@ -207,6 +208,39 @@ body main section h4 {
     font-size: 1.5rem;
     font-weight: bold;
     font-family: "Playfair Display", serif;
+}
+
+body main section h5 {
+    color: #fe9fa6;
+    font-size: 1.5rem;
+    font-weight: bold;
+    margin-bottom: 1rem;
+    font-family: "Playfair Display", serif;
+}
+
+body main section .faq {
+    border-radius: 2rem;
+}
+
+body main section .faq details {
+    margin: .5rem;
+    box-shadow: 
+        rgba(0, 0, 0, 0.2) 0px 2px 1px -1px, 
+        rgba(0, 0, 0, 0.14) 0px 1px 1px 0px, 
+        rgba(0, 0, 0, 0.12) 0px 1px 3px 0px;
+}
+
+body main section .faq details:hover {
+    cursor: pointer;
+}
+
+body main section .faq details summary {
+    padding: 1rem;
+}
+
+.faq-details {
+    padding: 1rem;
+    background-color: #fe9fa6;
 }
 
 body footer {
