--- a/styles/styles.css
+++ b/styles/styles.css
@@ -128,6 +128,7 @@ body header .left h1 {
 
 body header .left p {
     font-size: 2rem;
+    line-height: 3rem;
 }
 
 body main h2 {
@@ -155,7 +156,6 @@ body main .courses {
 }
 
 body main section h3 {
-    padding: 0 2rem;
     font-size: 3rem;
     font-weight: bold;
     color: var(--color-base-pink-800);
@@ -307,7 +307,7 @@ body main section h4 {
 body main section h5 {
     font-size: 3rem;
     font-weight: bold;
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
     color: var(--color-base-pink-800);
     font-family: "Playfair Display", serif;
 }
