--- a/styles/styles.css
+++ b/styles/styles.css
@@ -38,6 +38,10 @@ body header {
     background: linear-gradient(90deg, rgba(255,221,230,1) 0%, rgba(253,203,207,1) 35%, rgba(254,159,166,1) 100%);
 }
 
+body header #menu {
+    display: none;
+}
+
 body header #menu-toggle {
     top: 20px;
     left: 20px;
@@ -457,6 +461,51 @@ body footer {
         padding: 0 1rem;
     }
 
+    body header #menu-toggle {
+        display: none;
+    }
+
+    body header #sidebar-menu {
+        display: none;
+    }
+
+    body header #menu {
+        z-index: 4;
+        width: 100%;
+        display: flex;
+        position: fixed;
+        background: linear-gradient(90deg, rgba(255,221,230,1) 0%, rgba(253,203,207,1) 35%, rgba(254,159,166,1) 100%);
+    }
+
+    body header #menu ul {
+        width: 100%;
+        padding: 1rem;
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+    }
+
+    body header #menu ul li {
+        list-style-type: none;
+    }
+
+    body header #menu ul li a {
+        font-weight: 500;
+        font-size: 1.8rem;
+        text-decoration: none;
+        color: var(--color-base-gray-500);
+    }
+
+    body header #menu ul li a:hover{
+        transition: all 200ms ease-out;
+        color: var(--color-base-gray-700);
+    }
+
+    body header #menu ul li #logo-menu img {
+        width: 4.5rem;
+        height: 4.5rem;
+    }
+
     body header .left {
         width: 69%;
         padding: 0 8rem;
@@ -467,7 +516,7 @@ body footer {
     }
 
     body header .right img {
-        height: 100%;
+        height: 90%;
     }
 
     body header h1 {
