--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,8 +16,8 @@
     --color-base-gray-100: rgb(242, 242, 242);
     --color-base-gray-500: rgb(43, 43, 69);
     --color-base-gray-700: rgb(28, 28, 28);
-    --color-base-green-500: rgb(0, 204, 102);
-    --color-base-green-700: rgb(58, 230, 180);
+    --color-base-green-500: rgb(3, 139, 71);
+    --color-base-green-700: rgb(0, 204, 102);
 }
 
 html, body {
@@ -301,7 +301,9 @@ body main .courses .container .tablet .nota .button {
     width: 100%;
     height: 3rem;
     display: flex;
+    color: #fff;
     font-size: 2rem;
+    font-weight: 900;
     padding: 3rem 2rem;
     text-align: center;
     border-radius: 2rem;
@@ -309,7 +311,6 @@ body main .courses .container .tablet .nota .button {
     text-decoration: none;
     justify-content: center;
     text-transform: uppercase;
-    color: var(--color-base-white);
     transition: all 200ms ease-out;
     background-color: var(--color-base-green-500);
     box-shadow: 0 15px 30px -10px rgba(0, 0, 0, 0.1);
