--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,7 +16,7 @@
     --color-base-gray-100: rgb(242, 242, 242);
     --color-base-gray-500: rgb(43, 43, 69);
     --color-base-gray-700: rgb(28, 28, 28);
-    --color-base-green-500: rgb(3, 139, 71);
+    --color-base-green-500: rgb(0, 99, 51);
     --color-base-green-700: rgb(0, 204, 102);
 }
 
@@ -301,7 +301,6 @@ body main .courses .container .tablet .nota .button {
     width: 100%;
     height: 3rem;
     display: flex;
-    color: #fff;
     font-size: 2rem;
     font-weight: 600;
     padding: 3rem 2rem;
@@ -312,6 +311,7 @@ body main .courses .container .tablet .nota .button {
     justify-content: center;
     text-transform: uppercase;
     transition: all 200ms ease-out;
+    color: var(--color-base-white);
     background-color: var(--color-base-green-500);
     box-shadow: 0 15px 30px -10px rgba(0, 0, 0, 0.1);
 }
