--- a/styles/styles.css
+++ b/styles/styles.css
@@ -31,6 +31,14 @@ body {
     background-color: var(--color-base-white);
 }
 
+h2, h3, h4, h5, h6 {
+    font-size: 3rem;
+    font-weight: bold;
+    margin-bottom: 2rem;
+    color: var(--color-base-pink-900);
+    font-family: "Playfair Display", serif;
+}
+
 body header {
     height: auto;
     padding: 2rem;
@@ -153,12 +161,8 @@ body header .hero p {
     line-height: 3rem;
 }
 
-body main h2 {
+body main .title-box {
     padding: 2rem;
-    font-size: 3rem;
-    font-weight: bold;
-    color: var(--color-base-pink-900);
-    font-family: "Playfair Display", serif;
 }
 
 body main p {
@@ -177,19 +181,8 @@ body main .courses {
     border-top: 3px solid var(--color-base-pink-800);
 }
 
-body main section h3 {
-    font-size: 3rem;
-    font-weight: bold;
-    color: var(--color-base-pink-900);
-    font-family: "Playfair Display", serif;
-}
-
 body main .courses h3 {
-    padding: 0;
-    font-size: 3rem;
-    font-weight: 600;
     color: var(--color-base-gray-500);
-    font-family: "Playfair Display", serif;
 }
 
 body main section p {
@@ -322,21 +315,6 @@ body main .courses .container .tablet .nota .button:hover {
     background-color: var(--color-base-green-700);
 }
 
-body main section h4 {
-    font-size: 3rem;
-    font-weight: bold;
-    color: var(--color-base-pink-900);
-    font-family: "Playfair Display", serif;
-}
-
-body main section h5 {
-    font-size: 3rem;
-    font-weight: bold;
-    margin-bottom: 2rem;
-    color: var(--color-base-pink-900);
-    font-family: "Playfair Display", serif;
-}
-
 body main section .faq {
     border-radius: 2rem;
 }
@@ -374,14 +352,6 @@ body main .risco {
 body main .risco img {
     height: auto;
     max-width: 100%;
-}
-
-body main .risco h6 {
-    font-size: 3rem;
-    font-weight: bold;
-    margin-bottom: 1rem;
-    color: var(--color-base-pink-900);
-    font-family: "Playfair Display", serif;
 }
 
 body footer {
