:lipstick: feat: Adding responsive view of articles on blog page.

--- a/styles/articles.css
+++ b/styles/articles.css
@@ -111,8 +111,8 @@ body main .article-content {
     .article-img {
         max-width: 40%;
     }
-    
-    body .main-blog {
+
+    body .main-blog .article-content {
         display: flex;
     }
 
