--- a/styles/articles.css
+++ b/styles/articles.css
@@ -114,6 +114,7 @@ body main .article-content {
 
     body .main-blog .article-content {
         display: flex;
+        width: 75%;
     }
 
     body .main-blog .article-content article {
