--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,675 +1,6 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    -moz-osx-font-smoothing: grayscale;
-    -webkit-font-smoothing: antialiased;
-}
-
-:root {
-    font-size: 62.5%;
-    --color-base-white: rgb(249, 249, 249);
-    --color-base-pink-100: rgb(255, 221, 230, 0.5);
-    --color-base-pink-400: rgb(253, 203, 207);
-    --color-base-pink-800: rgb(254, 159, 166);
-    --color-base-pink-900: rgb(252, 45, 111);
-    --color-base-gray-100: rgb(242, 242, 242);
-    --color-base-gray-500: rgb(43, 43, 69);
-    --color-base-gray-700: rgb(28, 28, 28);
-    --color-base-green-500: rgb(0, 99, 51);
-    --color-base-green-700: rgb(0, 204, 102);
-}
-
-html, body {
-    scroll-behavior: smooth;
-    font-family: "Rubik", sans-serif;
-    color: var(--color-base-gray-500);
-}
-
-body {
-    font-size: 1.6rem;
-    background-color: var(--color-base-white);
-}
-
-h2, h3, h4, h5, h6 {
-    font-size: 3rem;
-    font-weight: bold;
-    margin-bottom: 2rem;
-    color: var(--color-base-pink-900);
-    font-family: "Playfair Display", serif;
-}
-
-body header {
-    height: auto;
-    padding: 2rem;
-    overflow: hidden;
-    position: relative;
-    margin-bottom: 1rem;
-    border-bottom: 5px solid var(--color-base-pink-800);
-}
-
-body header::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: url("../assets/images/desktop-1440/img-nails-banner.webp") center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    opacity: 0.5;
-    z-index: -1;
-}
-
-body header #menu {
-    display: none;
-}
-
-body header #menu-toggle {
-    top: 20px;
-    left: 20px;
-    z-index: 3;
-    border: none;
-    font-size: 2rem;
-    cursor: pointer;
-    position: fixed;
-    font-weight: bold;
-    border-radius: 50%;
-    padding: 1rem 1.5rem;
-    color: var(--color-base-gray-500);
-    background: var(--color-base-pink-400);
-}
-
-body header #menu-toggle:hover{
-    transition: all 200ms ease-out;
-    background: var(--color-base-pink-800);
-}
-
-body header #sidebar-menu {
-    top: 0;
-    z-index: 2;
-    left: -250px;
-    height: 100%;
-    width: 250px;
-    position: fixed;
-    transition: left 0.3s ease;
-    color: var(--color-base-gray-500);
-    background-color: var(--color-base-white);
-}
-
-body header #sidebar-menu ul {
-    padding: 20px;
-    margin-top: 8rem;
-    list-style-type: none;
-}
-
-body header #sidebar-menu ul li {
-    margin-bottom: 20px;
-}
-
-body header #sidebar-menu ul li a {
-    font-size: 18px;
-    text-decoration: none;
-    color: var(--color-base-gray-500);
-}
-
-body header #sidebar-menu ul li a:hover {
-    color: var(--color-base-gray-700)
-}
-
-body header #sidebar-menu.open {
-    left: 0;
-}
-
-body.menu-open {
-    overflow: hidden;
-    position: relative;
-}
-
-body.menu-open::before {
-    top: 0;
-    left: 0;
-    z-index: 1;
-    content: '';
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    transition: opacity 0.3s ease;
-    background: rgba(0, 0, 0, 0.5);
-}
-
-body header .hero {
-    width: 100%;
-    display: flex;
-    padding: 1rem;
-    text-align: left;
-    margin-top: 4rem;
-    flex-direction: column;
-    justify-content: center;
-}
-
-body header .hero h1 {
-    margin: 1rem 0;
-    font-size: 4.5rem;
-    padding-top: 2rem;
-    font-family: "Playfair Display", serif;
-}
-
-body header .hero p {
-    font-size: 2rem;
-    line-height: 3rem;
-}
-
-body main {
-    width: 100%;
-}
-
-body main .container {
-    display: flex;
-    flex-direction: column;
-}
-
-body main .container aside {
-    width: 100%;
-    padding: 1rem;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: start;
-    background-color: var(--color-base-white);
-    box-shadow: 0 15px 30px -10px rgba(0, 0, 0, 0.1);
-}
-
-body main .container aside .about-persona,
-body main .container aside .aside-share {
-    width: 100%;
-    display: flex;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
-    background: var(--color-base-pink-800);
-}
-
-body main .container aside .about-persona h3,
-body main .container aside .aside-share h4 {
-    margin: 0;
-    color: var(--color-base-white);
-}
-
-body main .container aside .compartilhamento {
-    margin: 1rem;
-    padding: 1rem;
-}
-
-body main .container aside .compartilhamento a {
-    text-decoration: none;
-}
-
-body main .container aside .compartilhamento a img {
-    width: 5rem;
-    height: 5rem;
-}
-
-body main .container .img-persona {
-    width: 12rem;
-    height: 12rem;
-    margin-top: 2rem;
-    border-radius: 50%;
-    border: 6px solid var(--color-base-pink-800);
-}
-
-body main .container aside p {
-    text-align: center;
-}
-
-body main .title-box {
-    padding: 2rem;
-}
-
-body main p {
-    font-size: 2rem;
-    line-height: 3rem;
-    padding: 1rem 2rem;
-}
-
-body main section {
-    padding: 1rem 2rem;
-}
-
-body main .courses {
-    padding: 1rem 2rem;
-    background-color: var(--color-base-gray-100);
-    border-top: 3px solid var(--color-base-pink-800);
-}
-
-body main .courses h3 {
-    color: var(--color-base-gray-500);
-}
-
-body main section p {
-    padding: 0;
-    margin: 1rem 0;
-    line-height: 3rem;
-}
-
-body main ul {
-    margin: 1rem;
-    padding: 0rem 2rem;
-    list-style-type: none;
-}
-
-body main ul li {
-    width: 100%;
-    display: flex;
-    font-size: 2rem;
-    font-weight: 500;
-    list-style: none;
-    align-items: center;
-    justify-content: baseline;
-    padding: .3rem .3rem .3rem 3rem;
-    background: url('../assets/icons/brilha-25-x-25.webp') no-repeat left center;
-    background-size: 2rem;
-}
-
-body main .courses .container {
-    display: flex;
-    flex-direction: column;
-}
-
-body main .courses .container figure {
-    width: 100%;
-    margin-bottom: 1rem;
-}
-
-body main .courses .container figure a img {
-    height: auto;
-    max-width: 100%;
-}
-
-body main .courses .container .tablet .pontos {
-    width: 100%;
-    height: auto;
-    display: flex;
-    margin-bottom: 1rem;
-    list-style-type: none;
-    flex-direction: column;
-    justify-content: center;
-}
-
-body main .courses .container .tablet .pontos li {
-    width: 100%;
-    display: flex;
-    margin: .5rem;
-    font-size: 2rem;
-    font-weight: 500;
-    list-style: none;
-    align-items: center;
-    justify-content: baseline;
-    padding: .3rem .3rem .3rem 3rem;
-}
-
-body main .courses .container .tablet .pontos .class-x {
-    background: url('../assets/icons/excluir-25-x-25.webp') no-repeat left center;
-    background-size: 2rem;
-}
-
-body main .courses .container .tablet .pontos .class-v {
-    background: url('../assets/icons/verificar-25-x-25.webp') no-repeat left center;
-    background-size: 2rem;
-}
-
-body main .courses .container .tablet .nota {
-    gap: 1rem;
-    width: 100%;
-    display: flex;
-    padding: 1rem 2rem;
-    text-align: center;
-    margin-bottom: 1rem;
-    flex-direction: column;
-}
-
-body main .courses .container .tablet .nota .p-nota {
-    font-size: 3rem;
-    font-weight: bold;
-    color: var(--color-base-pink-900);
-    font-family: "Playfair Display", serif;
-}
-
-body main .courses .container .tablet .nota p {
-    font-size: 3.5rem;
-    font-weight: 500;
-}
-
-body main .courses .container .tablet .nota .stars {
-    display: flex;
-    margin-bottom: 1rem;
-    justify-content: space-evenly;
-}
-
-body main .courses .container .tablet .nota .stars img {
-    height: 2.5rem;
-    max-width: 2.5rem;
-}
-
-body main .courses .container .tablet .nota .button {
-    width: 100%;
-    height: 3rem;
-    display: flex;
-    font-size: 2rem;
-    font-weight: 600;
-    padding: 3rem 2rem;
-    text-align: center;
-    border-radius: 2rem;
-    align-items: center;
-    text-decoration: none;
-    justify-content: center;
-    text-transform: uppercase;
-    transition: all 200ms ease-out;
-    color: var(--color-base-white);
-    background-color: var(--color-base-green-500);
-    box-shadow: 0 15px 30px -10px rgba(0, 0, 0, 0.1);
-}
-
-body main .courses .container .tablet .nota .button:hover {
-    cursor: pointer;
-    transform: scale(1.1);
-    background-color: var(--color-base-green-700);
-}
-
-body main #conclusao .compartilhamento {
-    display: flex;
-    justify-content: center;
-}
-
-body main #conclusao .compartilhamento a img {
-    width: 5rem;
-    height: auto;
-    margin: .5rem;
-    transition: filter 0.3s ease;
-}
-
-body main #conclusao .compartilhamento a img:hover {
-    filter: brightness(1.2);
-}
-
-body main section .faq {
-    border-radius: 2rem;
-}
-
-body main section .faq details {
-    margin: .5rem;
-    box-shadow: 
-        rgba(0, 0, 0, 0.2) 0px 2px 1px -1px, 
-        rgba(0, 0, 0, 0.14) 0px 1px 1px 0px, 
-        rgba(0, 0, 0, 0.12) 0px 1px 3px 0px;
-}
-
-body main section .faq details:hover {
-    cursor: pointer;
-}
-
-body main section .faq details summary {
-    padding: 1rem;
-    font-size: 2rem
-}
-
-.faq-details {
-    padding: 1rem;
-    background-color: var(--color-base-pink-800)
-}
-
-body main .risco {
-    display: flex;
-    padding: 2rem;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
-}
-
-body main .risco img {
-    height: auto;
-    max-width: 100%;
-}
-
-body footer {
-    width: 100%;
-    padding: 2rem;
-    font-weight: bold;
-    font-size: 1.2rem;
-    text-align: center;
-    background-color: var(--color-base-pink-800);
-    border-top: 5px solid var(--color-base-pink-400);
-}
-
-@media(min-width: 768px){
-    
-    body header {
-        padding: 0;
-        width: 100%;
-        height: 90vh;
-        display: flex;
-        justify-content: center;
-    }
-    
-    body header .hero {
-        padding: 0 8rem;
-    }
-
-    body header h1 {
-        margin: 1rem;
-    }
-
-    body header p {
-        margin: 1rem;
-    }
-    
-    body main {
-        padding: 0 1rem;
-    }
-    
-    body main .courses {
-        gap: 1rem;
-        align-items: center;
-        justify-content: center;
-    }
-
-    body main .courses .container {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-around;
-    }
-
-    body main .courses .container figure {
-        width: 45%;
-    }
-    
-    body main .courses .container figure a img {
-        max-width: 100%;
-    }
-
-    body main .courses .container .tablet {
-        width: 50%;
-        display: flex;
-        flex-direction: column;
-    }
-    
-    body main .courses .container .tablet .pontos {
-        width: 100%;
-    }
-    
-    body main .courses .container .tablet .nota {
-        width: 100%;
-        text-align: center;
-    }
-
-    body main .risco img {
-        height: 20rem;
-        max-width: 35rem;
-    }
-}
-
-@media(min-width: 1024px){
-
-    body header {
-        justify-content: flex-start;
-    }
-
-    body header #menu-toggle {
-        display: none;
-    }
-
-    body header #sidebar-menu {
-        display: none;
-    }
-
-    body header #menu {
-        z-index: 4;
-        width: 100%;
-        display: flex;
-        position: fixed;
-        background: linear-gradient(90deg, rgba(255,221,230,1) 0%, rgba(253,203,207,1) 35%, rgba(254,159,166,1) 100%);
-    }
-
-    /* Menu Superior */
-
-    body header #menu ul {
-        margin: 0;
-        padding: 0;
-        width: 100%;
-        display: flex;
-        align-items: center;
-        list-style-type: none;
-        justify-content: space-evenly;
-    }
-
-    body header #menu ul li {
-        position: relative;
-        margin-right: 2rem;
-    }
-
-    body header #menu ul li a {
-        display: block;
-        font-weight: 500;
-        font-size: 1.8rem;
-        padding: 10px 15px;
-        text-decoration: none;
-        color: var(--color-base-gray-500);
-    }
-
-    body header #menu ul li .submenu {
-        left: 0;
-        top: 100%; /* Coloca o submenu logo abaixo do item de menu pai */
-        z-index: 1;
-        display: none;
-        position: absolute; /* Para que o submenu fique sobreposto */
-        background-color: var(--color-base-white);
-        box-shadow: 0px 8px 16px rgba(0,0,0,0.1);
-    }
-
-    body header #menu ul li .submenu li {
-        margin: 0;
-        padding: 0;
-    }
-    
-    body header #menu ul li .submenu li a {
-        width: 40rem; /* Definindo a largura do submenu */
-        color: black;
-        text-align: left;
-        padding: 10px 15px;
-        background-color: #f9f9f9;
-    }
-    
-    /* Mostrar o submenu ao passar o mouse no item "Blog" */
-    body header #menu ul li:hover .submenu,
-    body header #menu ul li:focus-within .submenu {
-        display: block;
-    }
-    
-    /* Estilos opcionais para o submenu */
-    body header #menu ul li .submenu li a:hover {
-        background-color: #e2e2e2; /* Cor de fundo ao passar o mouse nos itens do submenu */
-    }
-
-    body header #menu ul li .submenu li a:focus {
-        background-color: #e2e2e2;
-    }
-
-    body header #menu ul li a:hover{
-        transition: all 200ms ease-out;
-        color: var(--color-base-gray-700);
-    }
-
-    body header #menu ul li #logo-menu img {
-        height: 4.5rem;
-        max-width: 4.5rem;
-    }
-
-    /* Fim - Menu Superior */
-
-    body header .hero {
-        width: 70%;
-    }
-    
-    body header h1 {
-        font-size: 3rem;
-        text-transform: uppercase;
-    }
-
-    body main {
-        padding: 0 3rem;
-    }
-
-    body main .container {
-        flex-direction: row;
-    }
-
-    body main .container aside {
-        width: 25%;
-    }
-
-    body main .courses {
-        padding: 2rem;
-    }
-
-    body main .courses .container {
-        gap: 1rem;
-        align-items: center;
-        flex-direction: row;
-    }
-
-    body main .courses .container figure {
-        margin: 0;
-        padding: 0;
-        width: 35%;
-    }
-
-    body main .courses .container figure a img {
-        height: 100%;
-        max-width: 100%;
-    }
-
-    body main .courses .container .tablet {
-        gap: 1rem;
-        width: 65%;
-        height: 100%;
-        flex-direction: row;
-    }
-
-    body main .courses .container .tablet .pontos {
-        margin: 0;
-        width: 50%;
-        padding: .5rem;
-    }    
-    
-    body main .courses .container .tablet .nota {
-        margin: 0;
-        width: 50%;
-        text-align: center;
-    }    
-
-    body main .courses .container .tablet .nota .button {
-        width: 100%;
-        height: 3rem;     
-    }
-}
+@import url("global.css");
+@import url("courses.css");
+@import url("header.css");
+@import url("aside.css");
+@import url("section.css");
+@import url("footer.css");
